# Launch_lens_Langgraph-Agent

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  README.md  SLIDES.md  SUBMISSION.md  VIVA.md  cli.py  main.py  pyproject.toml
assets/: graph_compiled.mmd  graph_styled.mmd  launchlens_architecture.drawio
backend/eval/: eval_results.md  golden_queries.py  run_eval.py
backend/src/launchlens/: __init__.py  cache.py  config.py  graph.py  llm.py  memory.py  nodes.py  state.py  tools.py
backend/src/launchlens/api/: __init__.py  app.py
backend/src/launchlens/clients/: __init__.py  oxylabs.py  serpapi.py
backend/tests/: test_pure.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: Analytics.jsx  ContextPanel.jsx  DemandPulse.jsx  MarketBoard.jsx  ProductCard.jsx  ResearchRail.jsx  Sidebar.jsx  Ticker.jsx  Turn.jsx  Verdict.jsx
graph_out/: launchlens_architecture.drawio
