[project]
name = "launchlens"
version = "0.1.0"
description = "LaunchLens: a LangGraph market-intelligence agent that fuses demand (SerpApi) and supply (Oxylabs) into Go/No-Go/Niche verdicts"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph-checkpoint-redis>=0.0.5",
    "langgraph-checkpoint-sqlite>=2.0",
    "redis>=5.0",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

# All importable logic lives in the backend package (backend/src/launchlens).
# cli.py and main.py stay at the repo root as the entry points.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/launchlens"]
